# rusty-xinput

./: .gitignore  Cargo.toml  LICENSE-0BSD.md  README.md  appveyor.yml  run.bat  rustfmt.toml
examples/: demo.rs  xinput_demo.rs
scripts/: build-ci.cmd  install-all.cmd
src/: lib.rs  xinput.rs
