[package]
name = "rusty-xinput"
version = "1.1.0"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/rusty-xinput"
readme = "README.md"
keywords = ["xinput"]
description = "Safe dynamic loading of xinput."
license = "0BSD"

[badges]
appveyor = { repository = "Lokathor/rusty-xinput" }

[lib]
name = "rusty_xinput"
path = "src/lib.rs"

[dependencies]
log = { version = "0.4", default-features = false }

[dev-dependencies]
simple_logger = "0.5.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "xinput", "winerror"] }
