[package]
name = "rusty-xinput"
version = "1.3.0"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/rusty-xinput"
readme = "README.md"
keywords = ["xinput"]
description = "Safe dynamic loading of xinput."
license = "Zlib OR Apache-2.0 OR MIT"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[lib]
name = "rusty_xinput"
path = "src/lib.rs"

[dependencies]
log = { version = "0.4", default-features = false }
lazy_static = "1.3"

[dev-dependencies]
simple_logger = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "xinput", "winerror"] }
